--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,7 @@ const identity = {
 const skills = ["Java", "Kotlin", "Gradle", "NixOS"];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 ---
 <BaseLayout pageTitle={pageTitle}>
