Update social links in footer

--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -32,23 +32,23 @@ const currentYear = new Date().getFullYear();
 
                 <ul class="flex items-center justify-center space-x-8 xl:justify-end">
                     <li>
-                        <a href="https://github.com/wasutz/astro-resume-theme" title="Github" target="_blank" rel="noopener noreferrer"
+                        <a href="https://github.com/britter" title="Github" target="_blank" rel="noopener noreferrer"
                            class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
                             <Icon name="Github" />
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://facebook.com" title="Facebook" target="_blank" rel="noopener noreferrer"
+						<a href="https://chaos.social/@britter" title="Mastodon" target="_blank" rel="noopener noreferrer"
                            class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                            <Icon name="Facebook" />
+                            <Icon name="Mastodon" />
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://instagram.com" title="Instagram" target="_blank" rel="noopener noreferrer"
+                        <a href="https://www.linkedin.com/in/benedikt-ritter-83847b84/" title="LinkedIn" target="_blank" rel="noopener noreferrer"
                            class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                            <Icon name="Instagram" />
+                            <Icon name="LinkedIn" />
                         </a>
                     </li>
                 </ul>
