--- a/src/components/sections/Portfolio.astro
+++ b/src/components/sections/Portfolio.astro
@@ -6,17 +6,20 @@ import { projects } from '../../config/cv.json';
 <section class="bg-background">
     <div class="container px-6 py-8 mx-auto">
         <h1 class="text-3xl font-semibold text-center capitalize lg:text-4xl">
-            Our Portfolio
+            Portfolio
         </h1>
 
         <p class="mt-4 text-center text-offset">
-            Discover our range of projects that highlight our expertise in design, development, and innovative solutions.
+            These are the Developer Productivity services I offer to help teams work more efficiently and effectively.
+            If none of these services align with your needs, I am also available for software development projects, where I excel as a strong individual contributor.
+            I can deliver features end-to-end, from gathering requirements and designing solutions to building architectures, implementing code, testing, and ensuring smooth delivery.
         </p>
 
         <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 xl:gap-12 md:grid-cols-2 xl:grid-cols-3">
             {projects.map(project => (
                 <Project
                     imageUrl={project.imageUrl}
+                    image={project.image}
                     title={project.title}
                     type={project.type}
                     link={project.link}
