--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Resume from '../components/sections/Resume.astro';
 import Portfolio from '../components/sections/Portfolio.astro';
 ---
 
-<Layout title="Astro Resume Theme">
+<Layout title="Benedikt Ritter - Developer Productivity Consulting">
 	<Hero />
 	<Portfolio />
 	<Resume />
