--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,6 +1,8 @@
 ---
 const { imageUrl, title, type, link, image } = Astro.props;
-const images = import.meta.glob('../assets/*.jpg');
+
+type ImageModule = { default: { src: string } };
+const images = import.meta.glob('../assets/*.jpg') as Record<string, () => Promise<ImageModule>>;
 const imageSrc = image && images[`../assets/${image}.jpg`]
     ? (await images[`../assets/${image}.jpg`]()).default.src
     : null;
