--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/sections/Hero.astro';
 import Resume from '../components/sections/Resume.astro';
-import Portfolio from '../components/sections/Portfolio.astro';
+import Services from '../components/sections/Services.astro';
 ---
 
 <Layout title="Benedikt Ritter - Developer Productivity Consulting">
 	<Hero />
-	<Portfolio />
+	<Services />
 	<Resume />
 </Layout>
