--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -4,8 +4,9 @@ import ThemeToggle from "../ThemeToggle.astro";
 import { basic } from "../../config/cv.json";
 
 const menuItems = [
-  { name: 'About', href: '/' },
-  { name: 'Blog', href: '/blogs' }
+    { name: 'Blog', href: '/blogs' },
+    { name: 'Services', href: '/services' },
+    { name: 'About', href: '/' },
 ];
 ---
 
