--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -1,6 +1,6 @@
 ---
-import Project from '../Project.astro';
-import { projects } from '../../config/cv.json';
+import Service from '../ServiceTile.astro';
+import { services } from '../../config/cv.json';
 ---
 
 <section class="bg-background">
@@ -16,13 +16,13 @@ import { projects } from '../../config/cv.json';
         </p>
 
         <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 xl:gap-12 md:grid-cols-2 xl:grid-cols-3">
-            {projects.map(project => (
-                <Project
-                    imageUrl={project.imageUrl}
-                    image={project.image}
-                    title={project.title}
-                    type={project.type}
-                    link={project.link}
+            {services.map(service => (
+                <Service
+                    imageUrl={service.imageUrl}
+                    image={service.image}
+                    title={service.title}
+                    type={service.type}
+                    link={service.link}
                 />
             ))}
         </div>
