Make ServiceDetail a layout

--- a/src/pages/services/gradle.astro
+++ b/src/pages/services/gradle.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import ServiceDetail from '../../components/sections/ServiceDetail.astro';
+import ServiceDetail from '../../layouts/ServiceDetail.astro';
 ---
 
 <Layout title="Benedikt Ritter - Developer Productivity Consulting">
