Add services link to footer

--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -10,20 +10,25 @@ const currentYear = new Date().getFullYear();
         <div class="text-center xl:flex xl:items-center xl:justify-between xl:text-left">
             <div class="xl:flex xl:items-center xl:justify-start">
                 <p class="mt-5 text-sm xl:ml-6 xl:mt-0">
-					© {currentYear} {basic.name}. All Rights Reserved.
+                    © {currentYear} {basic.name}. All Rights Reserved.
                 </p>
             </div>
 
             <div class="items-center mt-8 xl:mt-0 xl:flex xl:justify-end xl:space-x-8">
                 <ul class="flex flex-wrap items-center justify-center gap-x-8 gap-y-3 xl:justify-end">
                     <li>
-                        <a href="/" title="About" class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                            About
+                        <a href="/blogs" title="Blog" class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
+                            Blog
                         </a>
                     </li>
                     <li>
-                        <a href="/blogs" title="Blog" class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                            Blog
+                        <a href="/services" title="Blog" class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
+                            Services
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/" title="About" class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
+                            About
                         </a>
                     </li>
                 </ul>
@@ -39,7 +44,7 @@ const currentYear = new Date().getFullYear();
                     </li>
 
                     <li>
-						<a href="https://chaos.social/@britter" title="Mastodon" target="_blank" rel="noopener noreferrer"
+                        <a href="https://chaos.social/@britter" title="Mastodon" target="_blank" rel="noopener noreferrer"
                            class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
                             <Icon name="Mastodon" />
                         </a>
