Use prettier to format code base

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Hero from '../components/sections/Hero.astro';
-import Resume from '../components/sections/Resume.astro';
-import Services from '../components/sections/Services.astro';
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/sections/Hero.astro";
+import Resume from "../components/sections/Resume.astro";
+import Services from "../components/sections/Services.astro";
 ---
 
 <Layout title="Benedikt Ritter - Developer Productivity Consulting">
-	<Hero />
-	<Services />
-	<Resume />
+  <Hero />
+  <Services />
+  <Resume />
 </Layout>
