--- a/src/components/CardListSection.astro
+++ b/src/components/CardListSection.astro
@@ -1,5 +1,5 @@
 ---
-import CardListItem from './CardListItem.astro';
+import CardListItem from "./CardListItem.astro";
 
 interface Item {
   title: string;
@@ -14,18 +14,20 @@ const { title, items } = Astro.props;
 <section class="py-14 bg-background">
   <div class="container mx-auto px-4">
     <h2 class="text-3xl lg:text-4xl font-semibold text-center mb-12">
-        {title}
+      {title}
     </h2>
 
     <ul class="space-y-8">
-      {items.map((item: Item) => (
-        <CardListItem
-          title={item.title}
-          sub_title={item.sub_title}
-          years={item.years}
-          details={item?.details}
-        />
-      ))}
+      {
+        items.map((item: Item) => (
+          <CardListItem
+            title={item.title}
+            sub_title={item.sub_title}
+            years={item.years}
+            details={item?.details}
+          />
+        ))
+      }
     </ul>
   </div>
 </section>
