--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -12,40 +12,47 @@ const hasNextPage = page.url.next;
 const currentPage = page.currentPage;
 ---
 
-<nav aria-label="Blog pagination" class="flex justify-center items-center space-x-4 mt-8">
-  {hasPreviousPage ? (
-    <a
-      href={`/blogs/${currentPage - 1}`}
-      class="transition-all duration-300 ease-in-out flex items-center justify-center px-6 py-2 h-10 rounded-full border border-border bg-background hover:bg-offset hover:shadow-lg"
-    >
-      Previous
-    </a>
-  ) : (
-    <span
-      class="transition-all duration-300 ease-in-out flex items-center justify-center px-6 py-2 h-10 rounded-full border cursor-not-allowed text-offset bg-offset"
-      aria-disabled="true"
-    >
-      Previous
-    </span>
-  )}
+<nav
+  aria-label="Blog pagination"
+  class="flex justify-center items-center space-x-4 mt-8"
+>
+  {
+    hasPreviousPage ? (
+      <a
+        href={`/blogs/${currentPage - 1}`}
+        class="transition-all duration-300 ease-in-out flex items-center justify-center px-6 py-2 h-10 rounded-full border border-border bg-background hover:bg-offset hover:shadow-lg"
+      >
+        Previous
+      </a>
+    ) : (
+      <span
+        class="transition-all duration-300 ease-in-out flex items-center justify-center px-6 py-2 h-10 rounded-full border cursor-not-allowed text-offset bg-offset"
+        aria-disabled="true"
+      >
+        Previous
+      </span>
+    )
+  }
 
   <span class="flex items-center justify-center px-6 py-2 h-10 rounded-full">
     {currentPage}
   </span>
 
-  {hasNextPage ? (
-    <a
-      href={`/blogs/${currentPage + 1}`}
-      class="transition-all duration-300 ease-in-out flex items-center justify-center px-6 py-2 h-10 rounded-full border border-border bg-background hover:bg-offset hover:shadow-lg"
-    >
-      Next
-    </a>
-  ) : (
-    <span
-      class="transition-all duration-300 ease-in-out flex items-center justify-center px-6 py-2 h-10 rounded-full border cursor-not-allowed text-offset bg-offset"
-      aria-disabled="true"
-    >
-      Next
-    </span>
-  )}
+  {
+    hasNextPage ? (
+      <a
+        href={`/blogs/${currentPage + 1}`}
+        class="transition-all duration-300 ease-in-out flex items-center justify-center px-6 py-2 h-10 rounded-full border border-border bg-background hover:bg-offset hover:shadow-lg"
+      >
+        Next
+      </a>
+    ) : (
+      <span
+        class="transition-all duration-300 ease-in-out flex items-center justify-center px-6 py-2 h-10 rounded-full border cursor-not-allowed text-offset bg-offset"
+        aria-disabled="true"
+      >
+        Next
+      </span>
+    )
+  }
 </nav>
