--- a/src/components/ServiceTile.astro
+++ b/src/components/ServiceTile.astro
@@ -2,20 +2,27 @@
 const { imageUrl, title, type, link, image } = Astro.props;
 
 type ImageModule = { default: { src: string } };
-const images = import.meta.glob('../assets/*.jpg') as Record<string, () => Promise<ImageModule>>;
-const imageSrc = image && images[`../assets/${image}.jpg`]
+const images = import.meta.glob("../assets/*.jpg") as Record<
+  string,
+  () => Promise<ImageModule>
+>;
+const imageSrc =
+  image && images[`../assets/${image}.jpg`]
     ? (await images[`../assets/${image}.jpg`]()).default.src
     : null;
 ---
 
 <a href={link} rel="noopener noreferrer">
-    <div class="overflow-hidden bg-cover rounded-lg cursor-pointer h-64 group"
-        style={`background-image:url('${imageUrl ? imageUrl : imageSrc}')`}>
-        <div
-            class="flex flex-col justify-center w-full h-full px-8 py-4 transition-opacity duration-700
-                opacity-0 backdrop-blur-sm bg-gray-800/60 group-hover:opacity-100">
-            <h2 class="mt-4 text-xl font-semibold text-white">{title}</h2>
-            <p class="mt-2 text-lg tracking-wider text-primary uppercase ">{type}</p>
-        </div>
+  <div
+    class="overflow-hidden bg-cover rounded-lg cursor-pointer h-64 group"
+    style={`background-image:url('${imageUrl ? imageUrl : imageSrc}')`}
+  >
+    <div
+      class="flex flex-col justify-center w-full h-full px-8 py-4 transition-opacity duration-700
+                opacity-0 backdrop-blur-sm bg-gray-800/60 group-hover:opacity-100"
+    >
+      <h2 class="mt-4 text-xl font-semibold text-white">{title}</h2>
+      <p class="mt-2 text-lg tracking-wider text-primary uppercase">{type}</p>
     </div>
+  </div>
 </a>
