--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -6,58 +6,93 @@ const currentYear = new Date().getFullYear();
 ---
 
 <section class="py-10 mt-4">
-    <div class="px-4 mx-auto sm:px-6 lg:px-8 max-w-7xl">
-        <div class="text-center xl:flex xl:items-center xl:justify-between xl:text-left">
-            <div class="xl:flex xl:items-center xl:justify-start">
-                <p class="mt-5 text-sm xl:ml-6 xl:mt-0">
-                    © {currentYear} {basic.name}. All Rights Reserved.
-                </p>
-            </div>
+  <div class="px-4 mx-auto sm:px-6 lg:px-8 max-w-7xl">
+    <div
+      class="text-center xl:flex xl:items-center xl:justify-between xl:text-left"
+    >
+      <div class="xl:flex xl:items-center xl:justify-start">
+        <p class="mt-5 text-sm xl:ml-6 xl:mt-0">
+          © {currentYear}
+          {basic.name}. All Rights Reserved.
+        </p>
+      </div>
 
-            <div class="items-center mt-8 xl:mt-0 xl:flex xl:justify-end xl:space-x-8">
-                <ul class="flex flex-wrap items-center justify-center gap-x-8 gap-y-3 xl:justify-end">
-                    <li>
-                        <a href="/blogs" title="Blog" class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/services" title="Blog" class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                            Services
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/" title="About" class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                            About
-                        </a>
-                    </li>
-                </ul>
+      <div
+        class="items-center mt-8 xl:mt-0 xl:flex xl:justify-end xl:space-x-8"
+      >
+        <ul
+          class="flex flex-wrap items-center justify-center gap-x-8 gap-y-3 xl:justify-end"
+        >
+          <li>
+            <a
+              href="/blogs"
+              title="Blog"
+              class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+            >
+              Blog
+            </a>
+          </li>
+          <li>
+            <a
+              href="/services"
+              title="Blog"
+              class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+            >
+              Services
+            </a>
+          </li>
+          <li>
+            <a
+              href="/"
+              title="About"
+              class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+            >
+              About
+            </a>
+          </li>
+        </ul>
 
-                <div class="w-full h-px mt-8 mb-5 xl:w-px xl:m-0 xl:h-6 bg-border"></div>
-
-                <ul class="flex items-center justify-center space-x-8 xl:justify-end">
-                    <li>
-                        <a href="https://github.com/britter" title="Github" target="_blank" rel="noopener noreferrer"
-                           class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                            <Icon name="Github" />
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="https://chaos.social/@britter" title="Mastodon" target="_blank" rel="noopener noreferrer"
-                           class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                            <Icon name="Mastodon" />
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="https://www.linkedin.com/in/benedikt-ritter-83847b84/" title="LinkedIn" target="_blank" rel="noopener noreferrer"
-                           class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                            <Icon name="LinkedIn" />
-                        </a>
-                    </li>
-                </ul>
-            </div>
+        <div class="w-full h-px mt-8 mb-5 xl:w-px xl:m-0 xl:h-6 bg-border">
         </div>
+
+        <ul class="flex items-center justify-center space-x-8 xl:justify-end">
+          <li>
+            <a
+              href="https://github.com/britter"
+              title="Github"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+            >
+              <Icon name="Github" />
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="https://chaos.social/@britter"
+              title="Mastodon"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+            >
+              <Icon name="Mastodon" />
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="https://www.linkedin.com/in/benedikt-ritter-83847b84/"
+              title="LinkedIn"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+            >
+              <Icon name="LinkedIn" />
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </div>
 </section>
