--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -4,14 +4,16 @@ import ThemeToggle from "../ThemeToggle.astro";
 import { basic } from "../../config/cv.json";
 
 const menuItems = [
-    { name: 'Blog', href: '/blogs' },
-    { name: 'Services', href: '/services' },
-    { name: 'About', href: '/' },
+  { name: "Blog", href: "/blogs" },
+  { name: "Services", href: "/services" },
+  { name: "About", href: "/" },
 ];
 ---
 
 <header class="bg-background py-4">
-  <div class="container max-w-6xl mx-auto flex justify-between items-center px-4 md:px-8">
+  <div
+    class="container max-w-6xl mx-auto flex justify-between items-center px-4 md:px-8"
+  >
     <!-- Logo -->
     <div class="text-2xl font-bold">
       <a href="/" class="hover:text-offset">{basic?.name}</a>
@@ -20,15 +22,19 @@ const menuItems = [
     <div class="flex gap-5">
       <!-- PC Menu -->
       <nav class="hidden sm:flex space-x-6 items-center">
-        {menuItems.map((item) => (
-          <a href={item.href} class="hover:text-offset">{item.name}</a>
-        ))}
+        {
+          menuItems.map((item) => (
+            <a href={item.href} class="hover:text-offset">
+              {item.name}
+            </a>
+          ))
+        }
       </nav>
 
       <!-- Mobile Menu Button -->
       <div class="sm:hidden flex">
         <button id="menu-btn" class="focus:outline-none">
-          <Icon name="Menu" class="size-6"/>
+          <Icon name="Menu" class="size-6" />
         </button>
       </div>
 
@@ -38,19 +44,21 @@ const menuItems = [
 
   <!-- Mobile Menu -->
   <div id="mobile-menu" class="hidden sm:hidden">
-    {menuItems.map((item) => (
-      <a href={item.href} class="block px-4 py-2 hover:bg-background-offset">
-        {item.name}
-      </a>
-    ))}
+    {
+      menuItems.map((item) => (
+        <a href={item.href} class="block px-4 py-2 hover:bg-background-offset">
+          {item.name}
+        </a>
+      ))
+    }
   </div>
 </header>
 
 <script>
-  const menuBtn = document.getElementById('menu-btn');
-  const mobileMenu = document.getElementById('mobile-menu');
+  const menuBtn = document.getElementById("menu-btn");
+  const mobileMenu = document.getElementById("mobile-menu");
 
-  menuBtn?.addEventListener('click', () => {
-    mobileMenu?.classList.toggle('hidden');
+  menuBtn?.addEventListener("click", () => {
+    mobileMenu?.classList.toggle("hidden");
   });
 </script>
