--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -1,30 +1,38 @@
 ---
-import Service from '../ServiceTile.astro';
-import { services } from '../../config/cv.json';
+import Service from "../ServiceTile.astro";
+import { services } from "../../config/cv.json";
 ---
 
 <section class="bg-background">
-    <div class="container px-6 py-8 mx-auto">
-        <h1 class="text-3xl font-semibold text-center capitalize lg:text-4xl">
-            Services
-        </h1>
+  <div class="container px-6 py-8 mx-auto">
+    <h1 class="text-3xl font-semibold text-center capitalize lg:text-4xl">
+      Services
+    </h1>
 
-        <p class="mt-4 text-center text-offset">
-            These are the Developer Productivity services I offer to help teams work more efficiently and effectively.
-            If none of these services align with your needs, I am also available for software development projects, where I excel as a strong individual contributor.
-            I can deliver features end-to-end, from gathering requirements and designing solutions to building architectures, implementing code, testing, and ensuring smooth delivery.
-        </p>
+    <p class="mt-4 text-center text-offset">
+      These are the Developer Productivity services I offer to help teams work
+      more efficiently and effectively. If none of these services align with
+      your needs, I am also available for software development projects, where I
+      excel as a strong individual contributor. I can deliver features
+      end-to-end, from gathering requirements and designing solutions to
+      building architectures, implementing code, testing, and ensuring smooth
+      delivery.
+    </p>
 
-        <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 xl:gap-12 md:grid-cols-2 xl:grid-cols-3">
-            {services.map(service => (
-                <Service
-                    imageUrl={service.imageUrl}
-                    image={service.image}
-                    title={service.title}
-                    type={service.type}
-                    link={service.link}
-                />
-            ))}
-        </div>
+    <div
+      class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 xl:gap-12 md:grid-cols-2 xl:grid-cols-3"
+    >
+      {
+        services.map((service) => (
+          <Service
+            imageUrl={service.imageUrl}
+            image={service.image}
+            title={service.title}
+            type={service.type}
+            link={service.link}
+          />
+        ))
+      }
     </div>
+  </div>
 </section>
