--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,11 @@
 ---
-import Header from '../components/sections/Header.astro';
-import Footer from '../components/sections/Footer.astro';
+import Header from "../components/sections/Header.astro";
+import Footer from "../components/sections/Footer.astro";
 
-import '../styles/index.css';
+import "../styles/index.css";
 
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -13,43 +13,47 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en" class="h-full" data-theme="light">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
 
-		<!-- initialize theme -->
-		<script is:inline>
-			const themeSaved = localStorage.getItem("theme");
+    <!-- initialize theme -->
+    <script is:inline>
+      const themeSaved = localStorage.getItem("theme");
 
-			if (themeSaved) {
-				document.documentElement.dataset.theme = themeSaved;
-			} else {
-				const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
+      if (themeSaved) {
+        document.documentElement.dataset.theme = themeSaved;
+      } else {
+        const prefersDark = window.matchMedia(
+          "(prefers-color-scheme: dark)",
+        ).matches;
 
-				document.documentElement.dataset.theme = prefersDark ? "dark" : "light";
-			}
+        document.documentElement.dataset.theme = prefersDark ? "dark" : "light";
+      }
 
-			window
-				.matchMedia("(prefers-color-scheme: dark)")
-				.addEventListener("change", (event) => {
-					if (!localStorage.getItem("theme")) {
-						document.documentElement.dataset.theme = event.matches
-							? "dark"
-							: "light";
-					}
-				});
-		</script>
-	</head>
-	<body class="h-full flex flex-col overflow-x-hidden bg-default
-		text-default text-base selection:bg-secondary">
-		<Header />
-		<section class="flex-grow">
-			<slot />
-		</section>
-		<Footer />
-	</body>
+      window
+        .matchMedia("(prefers-color-scheme: dark)")
+        .addEventListener("change", (event) => {
+          if (!localStorage.getItem("theme")) {
+            document.documentElement.dataset.theme = event.matches
+              ? "dark"
+              : "light";
+          }
+        });
+    </script>
+  </head>
+  <body
+    class="h-full flex flex-col overflow-x-hidden bg-default
+		text-default text-base selection:bg-secondary"
+  >
+    <Header />
+    <section class="flex-grow">
+      <slot />
+    </section>
+    <Footer />
+  </body>
 </html>
