--- a/src/pages/blogs/[...page].astro
+++ b/src/pages/blogs/[...page].astro
@@ -1,17 +1,17 @@
 ---
-import { getCollection } from 'astro:content';
+import { getCollection } from "astro:content";
 import type { Page } from "astro";
 import type { CollectionEntry } from "astro:content";
-import Layout from '../../layouts/Layout.astro';
-import BlogList from '../../components/BlogList.astro';
-import Pagination from '../../components/Pagination.astro';
+import Layout from "../../layouts/Layout.astro";
+import BlogList from "../../components/BlogList.astro";
+import Pagination from "../../components/Pagination.astro";
 
 export async function getStaticPaths({ paginate }) {
-    const blogs = await getCollection("blogs");
+  const blogs = await getCollection("blogs");
 
-    return paginate(blogs, {
-        pageSize: 5,
-    });
+  return paginate(blogs, {
+    pageSize: 5,
+  });
 }
 
 export interface Props {
@@ -22,6 +22,6 @@ const { page } = Astro.props;
 ---
 
 <Layout title={`Blogs`}>
-	<BlogList blogs={page?.data || []} />
-    <Pagination page={page} />
+  <BlogList blogs={page?.data || []} />
+  <Pagination page={page} />
 </Layout>
