--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -1,9 +1,8 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import Services from '../../components/sections/Services.astro';
+import Layout from "../../layouts/Layout.astro";
+import Services from "../../components/sections/Services.astro";
 ---
 
 <Layout title="Benedikt Ritter - Developer Productivity Consulting">
-    <Services />
+  <Services />
 </Layout>
-
