--- a/src/pages/blogs/[slug].astro
+++ b/src/pages/blogs/[slug].astro
@@ -29,8 +29,8 @@ const { Content } = await blog.render();
 ---
 
 <Layout title={blog.data.title}>
-  <section class="flex justify-center mt-12">
-    <div id="markdown" class="prose prose-lg overflow-visible relative mb-5">
+  <section class="mt-12">
+    <div id="markdown" class="prose prose-lg mb-5">
       <Content />
     </div>
   </section>
