Revert "Fix layout problem with big code blocks on mobile screens"
This reverts commit 7f129b598d97a82a127384f83f948a923bfa8f94.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,8 +47,8 @@ const { title } = Astro.props;
     </script>
   </head>
   <body
-    class="h-full flex flex-col bg-default
-        text-default text-base selection:bg-secondary"
+    class="h-full flex flex-col overflow-x-hidden bg-default
+		text-default text-base selection:bg-secondary"
   >
     <Header />
     <section class="flex-grow">
