Change blog routing
Blog routes are now date based. Furthermore the blog's main page moved
from blogs to blog.

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -31,7 +31,7 @@ export interface Props {
 const { page } = Astro.props;
 ---
 
-<Layout title={`Blogs`}>
+<Layout title="Blog">
   <BlogList blogs={page?.data || []} />
   <Pagination page={page} />
 </Layout>
