--- a/src/components/BlogItem.astro
+++ b/src/components/BlogItem.astro
@@ -1,8 +1,9 @@
 ---
+import { getBlogParams } from "../utils/params";
 const { blog } = Astro.props;
 ---
 
-<a href={`/blogs/${blog.slug}`} class="block">
+<a href={`/blog/${getBlogParams(blog).path}`} class="block">
   <li
     class="group flex flex-col md:flex-row items-start bg-background p-5 rounded-lg shadow-md
         border border-default hover:shadow-lg transition-shadow"
