--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -19,7 +19,7 @@ const currentPage = page.currentPage;
   {
     hasPreviousPage ? (
       <a
-        href={`/blogs/${currentPage - 1}`}
+        href={`/blog/${currentPage - 1}`}
         class="transition-all duration-300 ease-in-out flex items-center justify-center px-6 py-2 h-10 rounded-full border border-border bg-background hover:bg-offset hover:shadow-lg"
       >
         Previous
@@ -41,7 +41,7 @@ const currentPage = page.currentPage;
   {
     hasNextPage ? (
       <a
-        href={`/blogs/${currentPage + 1}`}
+        href={`/blog/${currentPage + 1}`}
         class="transition-all duration-300 ease-in-out flex items-center justify-center px-6 py-2 h-10 rounded-full border border-border bg-background hover:bg-offset hover:shadow-lg"
       >
         Next
