--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -25,7 +25,7 @@ const currentYear = new Date().getFullYear();
         >
           <li>
             <a
-              href="/blogs"
+              href="/blog"
               title="Blog"
               class="text-sm transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
             >
