--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -4,7 +4,7 @@ import ThemeToggle from "../ThemeToggle.astro";
 import { basic } from "../../config/cv.json";
 
 const menuItems = [
-  { name: "Blog", href: "/blogs" },
+  { name: "Blog", href: "/blog" },
   { name: "Services", href: "/services" },
   { name: "About", href: "/" },
 ];
