--- a/src/pages/services/engineering-growth.astro
+++ b/src/pages/services/engineering-growth.astro
@@ -16,7 +16,7 @@ import ServiceDetail from "../../layouts/ServiceDetail.astro";
 
     <p class="mb-8">
       I’ve had the privilege of witnessing firsthand how an engineering team can
-      scale and evolve. At Gradle, Inc., I played a key role in scaling the
+      scale and evolve. At Gradle Inc., I played a key role in scaling the
       engineering team from 30 to over 100 engineers. The team is fully remote
       while maintaining exceptional efficiency and impact. By focusing on
       effective processes, strong communication, and team alignment, we were
