--- a/src/pages/services/gradle.astro
+++ b/src/pages/services/gradle.astro
@@ -14,7 +14,7 @@ import ServiceDetail from "../../layouts/ServiceDetail.astro";
     </p>
 
     <p class="mb-8">
-      With over 5 years of hands-on experience at Gradle, Inc., the company
+      With over 5 years of hands-on experience at Gradle Inc., the company
       behind the Gradle Build Tool, I bring unmatched expertise to help you make
       the most of Gradle. Whether you’re optimizing for performance, modernizing
       your build scripts, or solving complex dependency issues, I have the
