--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -58,6 +58,17 @@ const currentYear = new Date().getFullYear();
         <ul class="flex items-center justify-center space-x-8 xl:justify-end">
           <li>
             <a
+               href="/feed.xml"
+              title="RSS Feed"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="block transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"
+            >
+              <Icon name="Rss" />
+            </a>
+          </li>
+          <li>
+            <a
               href="https://github.com/britter"
               title="Github"
               target="_blank"
