--- a/src/pages/blog/[year]/[month]/[day]/[slug].astro
+++ b/src/pages/blog/[year]/[month]/[day]/[slug].astro
@@ -30,6 +30,7 @@ const { Content } = await render(blog);
 <Layout title={blog.data.title}>
   <section class="lg:flex justify-center mt-12">
     <div id="markdown" class="prose prose-lg overflow-visible relative mb-5">
+      <h1>{blog.data.title}</h1>
       <Content />
     </div>
   </section>
