--- a/src/pages/blog/[year]/[month]/[day]/[slug].astro
+++ b/src/pages/blog/[year]/[month]/[day]/[slug].astro
@@ -31,6 +31,15 @@ const { Content } = await render(blog);
   <section class="lg:flex justify-center mt-12">
     <div id="markdown" class="prose prose-lg overflow-visible relative mb-5">
       <h1>{blog.data.title}</h1>
+      <time datetime={blog.datetime} class="text-sm">
+        {
+          new Date(blog.data.pubDate).toLocaleDateString("en-US", {
+            year: "numeric",
+            month: "long",
+            day: "numeric",
+          })
+        }
+      </time>
       <Content />
     </div>
   </section>
