Add support for markdown callouts
This usese https://github.com/Microflash/remark-callout-directives to
render callout directives from markdown sources.

The remark-callout-directives project has a few glitches, to I needed to
override a few things. Here is the list of all supported callouts after
my customizations:

- note: renders "Note" with circled "i"
- tip: renders "Tip" with a lightbulb
- warn: renders "Warning" with a warning sign
- danger: renders "Danger" with a fire
- important: renders "Important" with a speech bubble

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,1 +1,6 @@
 @import "theme.css";
+@import "@microflash/remark-callout-directives/theme/github";
+/* Fix for https://github.com/Microflash/remark-callout-directives/pull/2 */
+.callout-hint > svg {
+  fill: none;
+}
